--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
     "@tailwindcss/forms": "^0.5.3",
+    "dotenv": "^16.0.3",
     "faker": "^5.5.3",
     "firebase": "^9.10.0",
     "next": "latest",
